force-app/main/default/objects/Competitor_Product__c/Competitor_Product__c.object-meta.xml
<CustomObject>
    <label>Competitor Product</label>
    <nameField>
        <label>Competitor Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>