force-app/main/default/objects/Competitor_Product__c/fields/Competitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account__c</fullName>
    <label>Competitor Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Products</relationshipLabel>
    <relationshipName>Competitor_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>