force-app/main/default/objects/Competitor_Product__c/listViews/All_Competitor_Products.listView-meta.xml
<ListView>
    <fullName>All_Competitor_Products</fullName>
    <columns>Competitor_Account__c</columns>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Competitor Products</label>
</ListView>